[package]
name = "ya-test-runtime-counters"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
ya-runtime-sdk = { version = "0.2", features = ["macros"] }

anyhow = "1.0"
futures = "0.3"
serde = { version = "^1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "0.2", features = ["time"] }

[package.metadata.deb]
assets = [
    ["target/release/ya-test-runtime-counters", "usr/lib/yagna/plugins/ya-test-runtime-counters/", "755"],
    ["conf/ya-test-runtime-counters.json", "usr/lib/yagna/plugins/", "644"],
]

[patch.crates-io]
ya-runtime-sdk = { git = "https://github.com/golemfactory/ya-runtime-sdk.git", branch = "mf/ya-runtime-api-0.4"}
